# winter_hackathon_team_red

./: Cargo.toml
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
crates/eth-trie-proofs/: Cargo.toml
crates/eth-trie-proofs/src/: lib.rs  rpc.rs  storage.rs
crates/evm_proof_faker/: Cargo.toml
evm_proof_faker/: Cargo.toml
evm_proof_faker/src/: lib.rs  main.rs
