[package]
name = "eth-trie-proofs"
version = "0.1.2"
edition = "2021"
description = "Ethereum Transaction Trie Proofs"
readme = "README.md"
license-file = "../../LICENSE"
repository = "https://github.com/HerodotusDev/eth-trie-proofs"
keywords = ["mpt", "trie", "ethereum"]
categories = ["cryptography", "data-structures"]
exclude = [".github"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
tokio = { version = "1.36.0", features = ["rt", "macros"] }
alloy-primitives.workspace = true
alloy.workspace = true
url.workspace = true
reqwest.workspace = true
alloy-rlp.workspace = true
eth_trie.workspace = true
ethereum-types.workspace = true
thiserror.workspace = true
tiny-keccak = { version = "2.0", features = ["sha3"] }
rlp = "0.6.1"
